funcionando taxas, exceptions e coverage